--- a/app/views/backend/groups/index.html.erb
+++ b/app/views/backend/groups/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to 'назад', "/backend", :class => "back" %>
 
 <div class="controls">
-  <%= link_to "<span>Нова група</span>".html_safe, new_backend_group_path, :class => "full" %>
+  <%= link_to "<span>Нова категория</span>".html_safe, new_backend_group_path, :class => "full" %>
 </div>
 
 <table class="sorted-table">
