started fixing Entity#edit, added index picture, modded the index text and the Login text as well.

--- a/app/views/backend/groups/edit.html.erb
+++ b/app/views/backend/groups/edit.html.erb
@@ -1,4 +1,4 @@
 <% title "Промяна на категория" %>
 <%= link_to 'назад', backend_groups_path, :class => "back" %>
 
-<%= render :partial => 'form', :locals => {:url => backend_groups_path} %>
+<%= render :partial => 'form', :locals => {:url => backend_group_path} %>
