--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,6 +17,7 @@
   <div class="menu-context-container">
     <div class="menu-container">
       <ul class="menu-slider fill-me-up">
+        <img src="/images/index-picture2.jpg" alt="" />
       </ul>
     </div>
     <div class="inner-menu-context">
@@ -34,7 +35,7 @@
 
   <h2>Какво виждам тук</h2>
   <p>
-    Вие виждате <strong>специално</strong> избрани типове, групирани в категории, които нямат нищо общо с истинките групи.
+    Вие виждате <strong>специално</strong> избрани и подбрани типове.
   </p>
 </div>
 
