fast permission error fix workaround

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= content_for(:title) || "allus.in" %></title>
-  <%= stylesheet_link_tag :all, :cache => true %>
+  <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag 'jquery.min', 'jquery-ui.min', 'rails', 'autocomplete-rails' %>
   <%= csrf_meta_tag %>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
