before tomorrows presentation

--- a/app/views/backend/main/index.html.erb
+++ b/app/views/backend/main/index.html.erb
@@ -1,5 +1,6 @@
 <% title "Мениджмънт" %>
 
 <div id="admin-nav">
-  <h2 class="first"><%= link_to "Задачи", backend_jobs_path %></h2> | <h2><%= link_to "Групи", backend_namespaces_path %></h2> | <h2><%= link_to "Категории", backend_groups_path %></h2> | <h2><%= link_to "Типове", backend_types_path %></h2>
+  <h2 class="first"><%= link_to "Задачи", backend_jobs_path %></h2> | <h2>
+<%= link_to "Групи", backend_namespaces_path %></h2> | <h2><%= link_to "Категории", backend_groups_path %></h2> | <h2><%= link_to "Типове", backend_types_path %></h2>
 </div>
