--- a/app/views/entities/_property_value.html.erb
+++ b/app/views/entities/_property_value.html.erb
@@ -1,3 +1,4 @@
+<% value = value.nil? ? {} : value %>
 <p>
 	<label>Стойност</label>
   <% if expected_type == "/type/integer" or expected_type == "/type/float" %>
